shim/oxide_shim.h


struct wl_display;
struct wl_event_loop;
struct wlr_backend;
struct wlr_output;
struct wlr_scene;
struct wlr_scene_output;
struct wlr_scene_tree;
struct wlr_scene_rect;
struct wlr_xdg_shell;
struct wlr_xdg_toplevel;
struct wlr_session_lock_manager_v1;
struct wlr_session_lock_v1;
struct wlr_session_lock_surface_v1;
struct wlr_seat;
struct wlr_input_device;
struct wlr_cursor;
struct wlr_output_layout;
struct wlr_session;
struct oxide_listener;
typedef void (*oxide_callback)(void *userdata, void *data);
typedef bool (*oxide_key_callback)(void *userdata, uint32_t keysym,
        uint32_t modifiers, bool pressed);
struct wlr_surface;
typedef bool (*oxide_grab_button_callback)(void *userdata,
        struct wlr_surface *root_surface, uint32_t button, uint32_t modifiers,
        bool pressed, double cx, double cy);
typedef bool (*oxide_grab_motion_callback)(void *userdata, double cx,
        double cy);
typedef void (*oxide_gesture_callback)(void *userdata, uint32_t trigger);
void oxide_log_init(void);
void oxide_setup_signals(struct wl_event_loop *loop, struct wl_display *display);
void *oxide_event_loop_add_readable(struct wl_event_loop *loop, int fd,
        oxide_callback callback, void *userdata);
void *oxide_event_loop_add_timer(struct wl_event_loop *loop, int delay_ms,
        oxide_callback callback, void *userdata);
void oxide_event_source_remove(void *source);
void oxide_reset_child_signals(void);
void oxide_virtual_keyboard_setup(struct wl_display *display,
        struct wlr_seat *seat);
void oxide_session_change_vt(struct wlr_session *session, unsigned vt);
struct oxide_listener *oxide_session_add_active(struct wlr_session *session,
        oxide_callback callback, void *userdata);
bool oxide_session_is_active(struct wlr_session *session);
struct oxide_listener *oxide_backend_add_new_output(
        struct wlr_backend *backend, oxide_callback callback, void *userdata);
struct oxide_listener *oxide_output_add_frame(
        struct wlr_output *output, oxide_callback callback, void *userdata);
struct oxide_listener *oxide_output_add_destroy(
        struct wlr_output *output, oxide_callback callback, void *userdata);
void oxide_output_enable(struct wlr_output *output, float scale);
const char *oxide_output_name(struct wlr_output *output);
struct wlr_scene_tree *oxide_scene_add_layer_tree(struct wlr_scene *scene);
struct wlr_scene_rect *oxide_scene_add_output_background(struct wlr_scene_tree *tree,
        struct wlr_output *output, int x, int y, float r, float g, float b);
struct wlr_scene_rect *oxide_scene_add_rect(struct wlr_scene_tree *tree,
        int x, int y, int width, int height, float r, float g, float b,
        float a);
void oxide_scene_rect_destroy(struct wlr_scene_rect *rect);
void oxide_scene_rect_set_enabled(struct wlr_scene_rect *rect, bool enabled);
void oxide_scene_rect_set_position(struct wlr_scene_rect *rect, int x, int y);
void *oxide_scene_add_wallpaper(struct wlr_scene_tree *tree, int x, int y,
        int buffer_width, int buffer_height, int dest_width, int dest_height,
        const uint8_t *pixels, size_t stride);
void oxide_scene_wallpaper_destroy(void *wallpaper);
void oxide_output_layout_get_box(struct wlr_output_layout *layout,
        struct wlr_output *output, int *x, int *y, int *width, int *height);
struct wlr_output *oxide_output_at_cursor(struct wlr_cursor *cursor,
        struct wlr_output_layout *layout);
void oxide_scene_output_render(struct wlr_scene_output *scene_output);
void oxide_output_schedule_frame(struct wlr_output *output);
struct oxide_listener *oxide_xdg_shell_add_new_toplevel(
        struct wlr_xdg_shell *shell, oxide_callback callback, void *userdata);
void oxide_xdg_shell_setup_popups(struct wlr_xdg_shell *shell);
struct wlr_scene_tree *oxide_scene_add_xdg_toplevel(struct wlr_scene_tree *tree,
        struct wlr_xdg_toplevel *toplevel);
struct oxide_listener *oxide_xdg_add_commit(struct wlr_xdg_toplevel *toplevel,
        oxide_callback callback, void *userdata);
bool oxide_xdg_initial_commit(struct wlr_xdg_toplevel *toplevel);
void oxide_xdg_toplevel_set_tiled_all(struct wlr_xdg_toplevel *toplevel);
void oxide_xdg_toplevel_set_tiled_none(struct wlr_xdg_toplevel *toplevel);
struct wlr_xdg_toplevel *oxide_xdg_toplevel_parent(
        struct wlr_xdg_toplevel *toplevel);
const char *oxide_xdg_toplevel_app_id(struct wlr_xdg_toplevel *toplevel);
bool oxide_xdg_toplevel_fixed_size(struct wlr_xdg_toplevel *toplevel);
void oxide_xdg_toplevel_geometry(struct wlr_xdg_toplevel *toplevel,
        int *width, int *height);
void oxide_listener_remove(struct oxide_listener *listener);
struct oxide_listener *oxide_xdg_add_map(struct wlr_xdg_toplevel *toplevel,
        oxide_callback callback, void *userdata);
struct oxide_listener *oxide_xdg_add_unmap(struct wlr_xdg_toplevel *toplevel,
        oxide_callback callback, void *userdata);
struct oxide_listener *oxide_xdg_add_destroy(struct wlr_xdg_toplevel *toplevel,
        oxide_callback callback, void *userdata);
struct oxide_listener *oxide_xdg_add_request_fullscreen(
        struct wlr_xdg_toplevel *toplevel, oxide_callback callback,
        void *userdata);
bool oxide_xdg_toplevel_requested_fullscreen(struct wlr_xdg_toplevel *toplevel);
void oxide_scene_tree_set_position(struct wlr_scene_tree *tree, int x, int y);
void oxide_scene_tree_set_clip(struct wlr_scene_tree *tree, int width, int height);
void oxide_scene_tree_set_enabled(struct wlr_scene_tree *tree, bool enabled);
void oxide_scene_tree_set_opacity(struct wlr_scene_tree *tree, float opacity);
void oxide_scene_tree_reparent(struct wlr_scene_tree *tree,
        struct wlr_scene_tree *new_parent);
void oxide_scene_tree_destroy(struct wlr_scene_tree *tree);
void oxide_focus_toplevel(struct wlr_seat *seat,
        struct wlr_xdg_toplevel *toplevel);
struct wlr_surface *oxide_xdg_toplevel_surface(struct wlr_xdg_toplevel *toplevel);
struct wlr_seat *oxide_seat_create(struct wl_display *display, const char *name);
struct oxide_listener *oxide_backend_add_new_input(
        struct wlr_backend *backend, oxide_callback callback, void *userdata);
void oxide_handle_new_input(struct wlr_seat *seat, struct wlr_cursor *cursor,
        struct wlr_input_device *device, oxide_key_callback key_callback,
        void *key_userdata);
struct wlr_cursor *oxide_cursor_setup(struct wlr_output_layout *layout,
        struct wlr_scene *scene, struct wlr_seat *seat);
void oxide_cursor_set_focus_callback(struct wlr_cursor *cursor,
        oxide_callback callback, void *userdata);
void oxide_cursor_set_double_tap_callback(struct wlr_cursor *cursor,
        oxide_callback callback, void *userdata);
void oxide_cursor_set_grab_callbacks(struct wlr_cursor *cursor,
        oxide_grab_button_callback button_callback,
        oxide_grab_motion_callback motion_callback, void *userdata);
void oxide_cursor_set_gestures(struct wlr_cursor *cursor,
        struct wlr_output_layout *layout, uint32_t enabled_mask,
        int keyboard_height, oxide_gesture_callback callback, void *userdata);
void oxide_cursor_set_keyboard_visible(struct wlr_cursor *cursor, bool visible);
void oxide_cursor_set_keyboard_height(struct wlr_cursor *cursor, int height);
void oxide_cursor_set_locked(struct wlr_cursor *cursor, bool locked);
struct wlr_session_lock_manager_v1 *oxide_session_lock_manager_create(
        struct wl_display *display);
struct oxide_listener *oxide_session_lock_manager_add_new_lock(
        struct wlr_session_lock_manager_v1 *manager,
        oxide_callback callback, void *userdata);
struct oxide_listener *oxide_session_lock_add_new_surface(
        struct wlr_session_lock_v1 *lock,
        oxide_callback callback, void *userdata);
struct oxide_listener *oxide_session_lock_add_unlock(
        struct wlr_session_lock_v1 *lock,
        oxide_callback callback, void *userdata);
struct oxide_listener *oxide_session_lock_add_destroy(
        struct wlr_session_lock_v1 *lock,
        oxide_callback callback, void *userdata);
void oxide_session_lock_send_locked(struct wlr_session_lock_v1 *lock);
void oxide_session_lock_reject(struct wlr_session_lock_v1 *lock);
struct wlr_output *oxide_session_lock_surface_output(
        struct wlr_session_lock_surface_v1 *surface);
struct wlr_scene_tree *oxide_scene_session_lock_surface_create(
        struct wlr_scene_tree *parent,
        struct wlr_session_lock_surface_v1 *surface);
void oxide_session_lock_surface_configure(
        struct wlr_session_lock_surface_v1 *surface,
        uint32_t width, uint32_t height);
void oxide_focus_session_lock_surface(struct wlr_seat *seat,
        struct wlr_session_lock_surface_v1 *surface);
void oxide_seat_clear_keyboard_focus(struct wlr_seat *seat);
struct oxide_listener *oxide_session_lock_surface_add_map(
        struct wlr_session_lock_surface_v1 *surface,
        oxide_callback callback, void *userdata);
struct oxide_listener *oxide_session_lock_surface_add_destroy(
        struct wlr_session_lock_surface_v1 *surface,
        oxide_callback callback, void *userdata);